test/errors/offsets_error/zs/float_error.zs
package float_error;

struct FloatError
{
    float32 offset;
offset:
    uint32  values[];
};
